Fixed appearance of message text Text wrap (new lines with '\n')

--- a/MessageList/ClientApp/src/app/components/main/main.component.css
+++ b/MessageList/ClientApp/src/app/components/main/main.component.css
@@ -197,6 +197,7 @@
 
 #messageText {
   font-family: Tahoma, Arial, sans-serif;
+  white-space: pre-wrap;
 }
 
 .edit-message,
